--- a/src/editor.html
+++ b/src/editor.html
@@ -13,9 +13,10 @@
 
       .container {
           background: whitesmoke;
-          height: 100vh;
+          min-height: 100vh;
           max-width: 600px;
           margin: auto;
+          padding: 0 8px 12px;
       }
 
       .section {
